@@ -1,3 +1,8 @@
+2009-04-28  Richard Guenther  <rguenther@suse.de>
+
+	* tree-vect-loop.c (get_initial_def_for_induction): Use
+	correct types for pointer increment.
+
 2009-04-29  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* toplev.c (print_version): Update GMP version string calculation.
